--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@tailwindcss/typography": "^0.5.13",
+		"@trivago/prettier-plugin-sort-imports": "^4.3.0",
 		"@types/eslint": "^8.56.7",
 		"autoprefixer": "^10.4.19",
 		"eslint": "^9.0.0",
@@ -41,6 +42,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@internationalized/date": "^3.5.4",
 		"@sveltestack/svelte-query": "^1.6.0",
 		"bits-ui": "^0.21.10",
 		"clsx": "^2.1.1",
