Fix : query invalidation

--- a/.prettierrc
+++ b/.prettierrc
@@ -8,5 +8,8 @@
 		"prettier-plugin-tailwindcss",
 		"@trivago/prettier-plugin-sort-imports"
 	],
-	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }]
+	"overrides": [{ "files": "*.svelte", "options": { "parser": "svelte" } }],
+	"importOrder": ["^@/compoent/ui/(.*)$", "^[./]"],
+	"importOrderSeparation": true,
+	"importOrderSortSpecifiers": true
 }
